--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -13,6 +13,7 @@ body {
 }
 
 button {
+    background-color: var(--button-background-color);
     font-family: Jomhuria;
     border: 1px solid #000;
     background: linear-gradient(180deg, #9e3232 38.54%, #f9e8e8 100%);
@@ -36,5 +37,6 @@ input {
 
 .app {
     height: 100%;
-    background-color: #01d287;
+    background-color: var(--background-color);
+    /* background-color: #01d287; */
 }
