--- a/frontend/src/components/pages/studentPage/studentPage.css
+++ b/frontend/src/components/pages/studentPage/studentPage.css
@@ -41,6 +41,14 @@
     font-size: 75px;
 }
 
+.choice-button.selected {
+    background-color: aqua;
+}
+
+.choice-button:hover {
+    background-color: aqua;
+}
+
 .difficulty {
     margin-top: 160px;
 }
